--- a/about.html
+++ b/about.html
@@ -11,13 +11,10 @@
 
     <link href="styles/style.css" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+        <!-- UBUNTU MONO -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -90,7 +87,7 @@
             </div>
 
             <div class="col-sm-6">
-                <img src="resources/jhare_cas_pfl_crpd.jpg" class="mx-auto d-block rounded-circle img-fluid"
+                <img src="resources/jhare_cas_pfl_crpd.jpg" alt="Headshot of James Hare" class="mx-auto d-block rounded-circle img-fluid"
                     style="width: 35%;">
             </div>
         </div>
