--- a/index.html
+++ b/index.html
@@ -11,16 +11,6 @@
 
     <link href="styles/style.css" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
-
-    <!-- INCONSOLATA  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-
-
     <!-- UBUNTU MONO -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +35,7 @@
                 <h3>James Hare</h3>
             </div>
             <div class="col-sm-9">
-                <div class="row text-center" style="margin-bottom:0;">
+                <div class="row" style="margin-bottom:0;">
                     <div class="col-sm-6"></div>
                     <div class="col-sm-2" id="divHome">
                         <a href="index.html"><input type="button" id="btnHome" value="Home"
