--- a/portfolio.html
+++ b/portfolio.html
@@ -11,13 +11,10 @@
 
     <link href="styles/style.css" rel="stylesheet">
 
+    <!-- UBUNTU MONO -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -57,30 +54,75 @@
     </header>
     <div class="content">
         <h1 class="text-center">My Work</h1>
-        <h2 style="margin-top:50px">Java TCP/IP Client-Server Project</h2>
-        <p>
-            In my sixth semester one of the courses I took was on mobile development with Java, which included a
-            hands-on test that required me
-            to create a TCP/IP client-server chatroom. This was pretty different from what I'd done to that point, which
-            was almost exclusively done in
-            C# and was more focused on developing stand-alone apps that would at most communicate with a database. It
-            was also my first time doing
-            any work with multithreading, which was difficult but enjoyable to work through.
-        </p>
-        <p>
-            This project was really fun to work on I plan on going back to fix some of the issues I encountered while
-            working on it at some point.
-            Mainly, there are some issues with the way that I manage the threads which can lead to the servercrashing
-            when too many command strings are
-            entered too quickly. Regardless, I'm happy with the way that it turned out and it should be really easy to
-            make the fixes required
-            given the heavily object oriented approach I took while developing it.
-        </p>
 
-        <h2 style="margin-top:50px">Community Project - C#/SQLite Point Of Sales System </h2>
-        <p>
+        <!-- TCP/IP CLIENT-SERVER  -->
+        <div class="row">
+            <h2 style="margin-top:50px">Java TCP/IP Client-Server Project</h2>
+            <div class="col-sm-8">
+                <p>
+                    In my sixth semester one of the courses I took was on mobile development with Java, which included a
+                    hands-on test that required me
+                    to create a TCP/IP client-server chatroom. This was pretty different from what I'd done to that
+                    point,
+                    which
+                    was almost exclusively done in
+                    C# and was more focused on developing stand-alone apps that would at most communicate with a
+                    database. It was also my first time doing
+                    any work with multithreading, which was difficult but enjoyable to work through.
+                </p>
+                <p>
+                    This project was really fun to work on I plan on going back to fix some of the issues I encountered
+                    while
+                    working on it at some point.
+                    Mainly, there are some issues with the way that I manage the threads which can lead to the server
+                    crashing
+                    when too many command strings are
+                    entered too quickly. Regardless, I'm happy with the way that it turned out and it should be really
+                    easy
+                    to
+                    make the fixes required
+                    given the heavily object oriented approach I took while developing it.
+                </p>
+                <p>You can find the source code for this project in its <a
+                        href="https://github.com/Hare-J/special-parakeet-server">GitHub repository</a>.</p>
+            </div>
+            <div class="col-sm-2">
+                <img src="resources/tcpip-chat.png" class="rounded mx-auto d-block" style="height:350px; width:auto;">
+            </div>
+            <div class="col-sm-2">
+                <img src="resources/tcpip-server-frame.png" class="rounded mx-auto d-block"
+                    style="height:350px; width:auto;">
+            </div>
+        </div>
+
+        <!-- CAMPGROUND API -->
+        <div class="row">
             
-        </p>
+        </div>
+
+        <!-- COMMUNITY PROJECT  -->
+        <div class="row">
+            <h2 style="margin-top:50px">Community Project - C#/SQLite Point Of Sales System </h2>
+            <p>
+                At the beginning of my fourth term with Niagara College, I was put into a team of six that I had
+                previously worked with
+                in another course with the intention of taking on a long-term live development process for a local
+                charity competing with three other
+                groups for app adoption.
+            </p>
+            <p>
+                Throughout the four month long term, we designed the application from the ground up, meeting with the
+                client regularly to
+                make sure we were including everything they wanted and were able to plan for future feature
+                implementations. This project
+                was, for us as inexperienced developers, a massive undertaking and a huge lesson in the importance of
+                teamwork and
+                communication. We built the application using the C# MVC framework for all the inner workings and front
+                end, and SQLite
+                for their database.
+            </p>
+            <img src="resources/grow-dashboard.png" class="rounded mx-auto d-block" style="width:50%; height:auto">
+        </div>
 
         <script src="scripts/app.js"></script>
     </div>
