Made portfolio.html more complete, general changes

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                     Niagara College's Computer Programmer Analyst program.
                 </p>
                 <p>
-                    I have a wide variety of experience in all facets of software development, as both an individual
+                    I have a wide variety of experience in all areas of software development, as both an individual
                     and a team member,
                     building everything from SQLS data warehouses to complex point of sales systems for a local food
                     charity in Niagara Falls.
