--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
     <div class="content intro-card fill-div">
         <h1 class="text-center" style="font-size:60px;margin-top:15%">James Hare</h1>
         <h2 class="text-center">Computer Programmer Analyst</h2>
+
+        <div class="row" style="font-size: 21px;padding-top:4%;">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-2 text-center">
+                <a href="portfolio.html">My Work</a>
+            </div>
+            <div class="col-sm-2 text-center"><a href="about.html">About Me</a></div>
+            <div class="col-sm-4"></div>
+        </div>
     </div>
     <script src="scripts/app.js"></script>
 </body>
