--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                     was almost exclusively done in
                     C# and was more focused on developing stand-alone apps that would at most communicate with a
                     database. It was also my first time doing
-                    any work with multithreading, which was difficult but enjoyable to work through.
+                    any work with multithreading, which was difficult at first but enjoyable to work through.
                 </p>
                 <p>
                     This project was really fun to work on I plan on going back to fix some of the issues I encountered
@@ -77,11 +77,14 @@
                     Mainly, there are some issues with the way that I manage the threads which can lead to the server
                     crashing
                     when too many command strings are
-                    entered too quickly. Regardless, I'm happy with the way that it turned out and it should be really
+                    entered too quickly. Regardless, I'm happy with the way that it turned out and it should be
                     easy
                     to
                     make the fixes required
                     given the heavily object oriented approach I took while developing it.
+                </p>
+                <p>
+                    <b>Skills used:</b> Java, TCP/IP networking, organization
                 </p>
                 <p>You can find the source code for this project in its <a
                         href="https://github.com/Hare-J/special-parakeet-server">GitHub repository</a>.</p>
@@ -94,12 +97,46 @@
                     style="height:350px; width:auto;">
             </div>
         </div>
-
-        <!-- CAMPGROUND API -->
+        <hr>
+        <!-- THIS SITE  -->
         <div class="row">
-            
+            <h2 style="margin-top:50px">This Portfolio</h2>
+            <p>
+                I made this entire site from scratch for COMM1310 in my final semester with Niagara College with HTML
+                and CSS with
+                Bootstrap. I didn't have much experience with web development specifically before this project, having
+                worked mainly with
+                MVC views and razor code in C#, but this project seemed like a great opportunity to get some more
+                experience creating
+                responsive, modern web pages.
+            </p>
+            <p>
+                <b>Skills used:</b> UX design, HTML/CSS,
+            </p>
+            <p>You can find the source code for this project in its <a
+                    href="https://github.com/Hare-J/Hare-J.github.io">GitHub repository</a>.</p>
         </div>
+        <hr>
+        <!-- CUSTOM API -->
+        <div class="row">
+            <h2 style="margin-top:50px">Custom API with C# MVC Framework</h2>
+            <p>
+                During my fourth term I took a course in Mobile development where I learned how to build custom API's
+                and Xamarin Forms (MAUI.NET) apps
+                in C# using both MVC design patterns. For my final project in this course, I decided to build an API and
+                accompanying Xamarin Forms app.
+                The Xamarin Forms app is still in development, but the API is functional with Swagger.
+            </p>
+            <p>
+                <b>Skills used:</b> Organization, C#, MVC (API), MVVM (XF), Swagger
+            </p>
+            <p>You can find the source code for this project in its <a
+                    href="https://github.com/Hare-J/super-fiesta-api">GitHub repository</a>.</p>
 
+            <img src="resources/api-swagger.png" class="rounded mx-auto d-block"
+                style="width:50%; height:auto; padding-top: 20px; padding-bottom:15px;">
+        </div>
+        <hr>
         <!-- COMMUNITY PROJECT  -->
         <div class="row">
             <h2 style="margin-top:50px">Community Project - C#/SQLite Point Of Sales System </h2>
@@ -121,7 +158,11 @@
                 end, and SQLite
                 for their database.
             </p>
-            <img src="resources/grow-dashboard.png" class="rounded mx-auto d-block" style="width:50%; height:auto">
+            <p>
+                <b>Skills used:</b> Teamwork, communication, C# MVC, UX design
+            </p>
+            <img src="resources/grow-dashboard.png" class="rounded mx-auto d-block"
+                style="width:50%; height:auto; padding-top: 20px;">
         </div>
 
         <script src="scripts/app.js"></script>
