added alt tags to images

--- a/portfolio.html
+++ b/portfolio.html
@@ -90,11 +90,12 @@
                         href="https://github.com/Hare-J/special-parakeet-server">GitHub repository</a>.</p>
             </div>
             <div class="col-sm-2">
-                <img src="resources/tcpip-chat.png" class="rounded mx-auto d-block" style="height:350px; width:auto;">
+                <img src="resources/tcpip-chat.png" alt="a conversation in a chat app" class="rounded mx-auto d-block"
+                    style="height:350px; width:auto;">
             </div>
             <div class="col-sm-2">
-                <img src="resources/tcpip-server-frame.png" class="rounded mx-auto d-block"
-                    style="height:350px; width:auto;">
+                <img src="resources/tcpip-server-frame.png" alt="an image of the server frame for a TCP/IP server"
+                    class="rounded mx-auto d-block" style="height:350px; width:auto;">
             </div>
         </div>
         <hr>
@@ -133,7 +134,7 @@
             <p>You can find the source code for this project in its <a
                     href="https://github.com/Hare-J/super-fiesta-api">GitHub repository</a>.</p>
 
-            <img src="resources/api-swagger.png" class="rounded mx-auto d-block"
+            <img src="resources/api-swagger.png" alt="Swagger UI showing Pokemon in an API" class="rounded mx-auto d-block"
                 style="width:50%; height:auto; padding-top: 20px; padding-bottom:15px;">
         </div>
         <hr>
@@ -161,7 +162,7 @@
             <p>
                 <b>Skills used:</b> Teamwork, communication, C# MVC, UX design
             </p>
-            <img src="resources/grow-dashboard.png" class="rounded mx-auto d-block"
+            <img src="resources/grow-dashboard.png" alt="image of a point of sales dashboard" class="rounded mx-auto d-block"
                 style="width:50%; height:auto; padding-top: 20px;">
         </div>
 
