--- a/portfolio.html
+++ b/portfolio.html
@@ -112,7 +112,7 @@
                 responsive, modern web pages.
             </p>
             <p>
-                <b>Skills used:</b> UX design, HTML/CSS,
+                <b>Skills used:</b> UX design, HTML/CSS
             </p>
             <p>You can find the source code for this project in its <a
                     href="https://github.com/Hare-J/Hare-J.github.io">GitHub repository</a>.</p>
@@ -122,7 +122,7 @@
         <div class="row">
             <h2 style="margin-top:50px">Custom API with C# MVC Framework</h2>
             <p>
-                During my fourth term I took a course in Mobile development where I learned how to build custom API's
+                During my fourth term I took a course in mobile development where I learned how to build custom API's
                 and Xamarin Forms (MAUI.NET) apps
                 in C# using both MVC design patterns. For my final project in this course, I decided to build an API and
                 accompanying Xamarin Forms app.
