Added contact info and link to resume

--- a/about.html
+++ b/about.html
@@ -96,6 +96,8 @@
         <div class="row">
             <h2 style="margin-bottom:15px">Experience</h2>
 
+            <p><a href="resources/JHare - Resume.pdf" target="_blank">My Resume</a></p>
+
             <h3>Niagara College Peer Tutoring</h3>
             <p>
                 During my second and third terms I was hired by the college as a peer tutor for a number of classes
@@ -156,6 +158,12 @@
                 as well accept the discomfort and take away as much as you possibly can from it.
             </p>
         </div>
+
+        <hr>
+
+        <h2>Contact Me</h2>
+        <p>Phone: (289) 228-1888</p>
+        <p>Email: jahare@live.ca</p>
     </div>
 
     <script src="scripts/app.js"></script>
