fixed wording in api work section

--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
             <p>
                 During my fourth term I took a course in mobile development where I learned how to build custom API's
                 and Xamarin Forms (MAUI.NET) apps
-                in C# using both MVC design patterns. For my final project in this course, I decided to build an API and
+                in C# using both MVC and MVVM design patterns. For my final project in this course, I decided to build an API and
                 accompanying Xamarin Forms app.
                 The Xamarin Forms app is still in development, but the API is functional with Swagger.
             </p>
