links to github now open in a new tab

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                     Some of the projects I'm most proud of, or even just had the most fun working on, can be found
                     in the
                     <a href="portfolio.html">Work</a> section of this site or on my GitHub page at
-                    <a href="https://github.com/Hare-J">Hare-J</a>.
+                    <a href="https://github.com/Hare-J" target="_blank">Hare-J</a>.
                 </p>
                 <p>
                     I am extremely passionate about building quality software following solid object-oriented design for
