--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
                     <b>Skills used:</b> Java, TCP/IP networking, organization
                 </p>
                 <p>You can find the source code for this project in its <a
-                        href="https://github.com/Hare-J/special-parakeet-server">GitHub repository</a>.</p>
+                        href="https://github.com/Hare-J/special-parakeet-server" target="_blank">GitHub repository</a>.</p>
             </div>
             <div class="col-sm-2">
                 <img src="resources/tcpip-chat.png" alt="a conversation in a chat app" class="rounded mx-auto d-block"
@@ -115,7 +115,7 @@
                 <b>Skills used:</b> UX design, HTML/CSS
             </p>
             <p>You can find the source code for this project in its <a
-                    href="https://github.com/Hare-J/Hare-J.github.io">GitHub repository</a>.</p>
+                    href="https://github.com/Hare-J/Hare-J.github.io" target="_blank">GitHub repository</a>.</p>
         </div>
         <hr>
         <!-- CUSTOM API -->
@@ -132,7 +132,7 @@
                 <b>Skills used:</b> Organization, C#, MVC (API), MVVM (XF), Swagger
             </p>
             <p>You can find the source code for this project in its <a
-                    href="https://github.com/Hare-J/super-fiesta-api">GitHub repository</a>.</p>
+                    href="https://github.com/Hare-J/super-fiesta-api" target="_blank">GitHub repository</a>.</p>
 
             <img src="resources/api-swagger.png" alt="Swagger UI showing Pokemon in an API" class="rounded mx-auto d-block"
                 style="width:50%; height:auto; padding-top: 20px; padding-bottom:15px;">
