Contact easier to find, rm inexperience on work

--- a/about.html
+++ b/about.html
@@ -84,6 +84,10 @@
                     ease of future use
                     and development.
                 </p>
+
+                <h3>Contact Me:</h3>
+                <p>Phone: (289) 228-1888 &nbsp;&nbsp;&nbsp;&nbsp; Email: jahare@live.ca </p>
+                <p></p>
             </div>
 
             <div class="col-sm-6">
@@ -158,12 +162,6 @@
                 as well accept the discomfort and take away as much as you possibly can from it.
             </p>
         </div>
-
-        <hr>
-
-        <h2>Contact Me</h2>
-        <p>Phone: (289) 228-1888</p>
-        <p>Email: jahare@live.ca</p>
     </div>
 
     <script src="scripts/app.js"></script>
