--- a/portfolio.html
+++ b/portfolio.html
@@ -71,23 +71,14 @@
                     any work with multithreading, which was difficult at first but enjoyable to work through.
                 </p>
                 <p>
-                    This project was really fun to work on I plan on going back to fix some of the issues I encountered
-                    while
-                    working on it at some point.
-                    Mainly, there are some issues with the way that I manage the threads which can lead to the server
-                    crashing
-                    when too many command strings are
-                    entered too quickly. Regardless, I'm happy with the way that it turned out and it should be
-                    easy
-                    to
-                    make the fixes required
-                    given the heavily object oriented approach I took while developing it.
+                    
                 </p>
                 <p>
                     <b>Skills used:</b> Java, TCP/IP networking, organization
                 </p>
                 <p>You can find the source code for this project in its <a
-                        href="https://github.com/Hare-J/special-parakeet-server" target="_blank">GitHub repository</a>.</p>
+                        href="https://github.com/Hare-J/special-parakeet-server" target="_blank">GitHub repository</a>.
+                </p>
             </div>
             <div class="col-sm-2">
                 <img src="resources/tcpip-chat.png" alt="a conversation in a chat app" class="rounded mx-auto d-block"
@@ -114,8 +105,8 @@
             <p>
                 <b>Skills used:</b> UX design, HTML/CSS
             </p>
-            <p>You can find the source code for this project in its <a
-                    href="https://github.com/Hare-J/Hare-J.github.io" target="_blank">GitHub repository</a>.</p>
+            <p>You can find the source code for this project in its <a href="https://github.com/Hare-J/Hare-J.github.io"
+                    target="_blank">GitHub repository</a>.</p>
         </div>
         <hr>
         <!-- CUSTOM API -->
@@ -124,18 +115,19 @@
             <p>
                 During my fourth term I took a course in mobile development where I learned how to build custom API's
                 and Xamarin Forms (MAUI.NET) apps
-                in C# using both MVC and MVVM design patterns. For my final project in this course, I decided to build an API and
+                in C# using both MVC and MVVM design patterns. For my final project in this course, I decided to build
+                an API and
                 accompanying Xamarin Forms app.
                 The Xamarin Forms app is still in development, but the API is functional with Swagger.
             </p>
             <p>
                 <b>Skills used:</b> Organization, C#, MVC (API), MVVM (XF), Swagger
             </p>
-            <p>You can find the source code for this project in its <a
-                    href="https://github.com/Hare-J/super-fiesta-api" target="_blank">GitHub repository</a>.</p>
+            <p>You can find the source code for this project in its <a href="https://github.com/Hare-J/super-fiesta-api"
+                    target="_blank">GitHub repository</a>.</p>
 
-            <img src="resources/api-swagger.png" alt="Swagger UI showing Pokemon in an API" class="rounded mx-auto d-block"
-                style="width:50%; height:auto; padding-top: 20px; padding-bottom:15px;">
+            <img src="resources/api-swagger.png" alt="Swagger UI showing Pokemon in an API"
+                class="rounded mx-auto d-block" style="width:50%; height:auto; padding-top: 20px; padding-bottom:15px;">
         </div>
         <hr>
         <!-- COMMUNITY PROJECT  -->
@@ -152,18 +144,18 @@
                 Throughout the four month long term, we designed the application from the ground up, meeting with the
                 client regularly to
                 make sure we were including everything they wanted and were able to plan for future feature
-                implementations. This project
-                was, for us as inexperienced developers, a massive undertaking and a huge lesson in the importance of
+                implementations. This made for a great lesson in the importance of
                 teamwork and
-                communication. We built the application using the C# MVC framework for all the inner workings and front
+                communication on large projects, especially given the tight deadlines we had to work with. We built the
+                application using the C# MVC framework for all the inner workings and front
                 end, and SQLite
                 for their database.
             </p>
             <p>
                 <b>Skills used:</b> Teamwork, communication, C# MVC, UX design
             </p>
-            <img src="resources/grow-dashboard.png" alt="image of a point of sales dashboard" class="rounded mx-auto d-block"
-                style="width:50%; height:auto; padding-top: 20px;">
+            <img src="resources/grow-dashboard.png" alt="image of a point of sales dashboard"
+                class="rounded mx-auto d-block" style="width:50%; height:auto; padding-top: 20px;">
         </div>
 
         <script src="scripts/app.js"></script>
