Grammar fixes on about.html

--- a/about.html
+++ b/about.html
@@ -72,8 +72,7 @@
                 <p>
                     I have a wide variety of experience in all areas of software development, as both an individual
                     and a team member,
-                    building everything from SQLS data warehouses to complex point of sales systems for a local food
-                    charity in Niagara Falls.
+                    building everything from SQLS data warehouses to complex point-of-sale systems.
                     Some of the projects I'm most proud of, or even just had the most fun working on, can be found
                     in the
                     <a href="portfolio.html">Work</a> section of this site or on my GitHub page at
