added fade-in affect to index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 
     </header>
     <!-- END NAV BAR -->
+
+    
     <div class="content intro-card fill-div">
+        <div class="fade-in">
         <h1 class="text-center" style="font-size:60px;margin-top:15%">James Hare</h1>
         <h2 class="text-center">Computer Programmer Analyst</h2>
 
@@ -64,6 +67,7 @@
             <div class="col-sm-2 text-center"><a href="about.html">About Me</a></div>
             <div class="col-sm-4"></div>
         </div>
+    </div>
     </div>
     <script src="scripts/app.js"></script>
 </body>
