--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
@@ -53,21 +57,21 @@
     </header>
     <!-- END NAV BAR -->
 
-    
+
     <div class="content intro-card fill-div">
         <div class="fade-in">
-        <h1 class="text-center" style="font-size:60px;margin-top:15%">James Hare</h1>
-        <h2 class="text-center">Computer Programmer Analyst</h2>
+            <h1 class="text-center" style="font-size:60px;margin-top:15%">James Hare</h1>
+            <h2 class="text-center">Computer Programmer Analyst</h2>
 
-        <div class="row" style="font-size: 21px;padding-top:4%;">
-            <div class="col-sm-4"></div>
-            <div class="col-sm-2 text-center">
-                <a href="portfolio.html">My Work</a>
+            <div class="row" style="font-size: 21px;padding-top:4%;">
+                <div class="col-sm-4"></div>
+                <div class="col-sm-2 text-center">
+                    <a href="portfolio.html">My Work</a>
+                </div>
+                <div class="col-sm-2 text-center"><a href="about.html">About Me</a></div>
+                <div class="col-sm-4"></div>
             </div>
-            <div class="col-sm-2 text-center"><a href="about.html">About Me</a></div>
-            <div class="col-sm-4"></div>
         </div>
-    </div>
     </div>
     <script src="scripts/app.js"></script>
 </body>
