changed nav link buttons to folder-tab style

--- a/about.html
+++ b/about.html
@@ -38,18 +38,15 @@
                 <div class="col-sm-9">
                     <div class="row" style="margin-bottom:0;">
                         <div class="col-sm-6"></div>
-
-                        <!-- NAV LINKS -->
-                        <div class="col-sm-2">
-                            <a href="index.html"><input type="button" id="btnHome" value="Home"></a>
-                        </div>
-                        <div class="col-sm-2">
-                            <a href="about.html"><input type="button" id="btnAbout" value="About"
-                                    style="text-decoration:underline; font-weight:bold"></a>
-                        </div>
-                        <div class="col-sm-2">
-                            <a href="portfolio.html"><input type="button" id="btnPortfolio" value="Work"></a>
-                        </div>
+                    <div class="col-sm-2 nav-tab" id="divHome">
+                        <a href="index.html"><input type="button" id="btnHome" value="Home"></a>
+                    </div>
+                    <div class="col-sm-2 nav-tab-selected">
+                        <a href="about.html"><input type="button" id="btnAbout" value="About"></a>
+                    </div>
+                    <div class="col-sm-2 nav-tab">
+                        <a href="portfolio.html"><input type="button" id="btnPortfolio" value="Work"></a>
+                    </div>
                     </div>
                 </div>
             </nav>
