--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
             <div class="col-sm-9">
                 <div class="row" style="margin-bottom:0;">
                     <div class="col-sm-6"></div>
-                    <div class="col-sm-2" id="divHome">
-                        <a href="index.html"><input type="button" id="btnHome" value="Home"
-                                style="text-decoration:underline; font-weight:bold"></a>
+                    <div class="col-sm-2 nav-tab-selected" id="divHome">
+                        <a href="index.html"><input type="button" id="btnHome" value="Home"></a>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-sm-2 nav-tab">
                         <a href="about.html"><input type="button" id="btnAbout" value="About"></a>
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-sm-2 nav-tab">
                         <a href="portfolio.html"><input type="button" id="btnPortfolio" value="Work"></a>
                     </div>
                 </div>
